[package]
name = "press-party"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
description = "Assign metadata and album art to music, with batch processing and in-terminal image preview"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
image = "0.25"
lofty = "0.24"
owo-colors = { version = "4.3", features = ["alloc", "supports-colors"] }
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
viuer = "0.11"
